--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+
+@layer base {
+  @font-face {
+    font-family: Lato;
+    font-weight: 400;
+    src: url(./assets/fonts/Lato-Regular.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: Lato;
+    font-weight: 700;
+    src: url(./assets/fonts/Lato-Bold.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: Comfortaa;
+    font-weight: 400;
+    src: url(./assets/fonts/Comfortaa.ttf) format("truetype");
+  }
+
+  body {
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-app-region: no-drag;
+    cursor: default;
+    @apply bg-white dark:bg-[#1b1b1b];
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::after,
+*::before {
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+  cursor: default;
 }
+
+.title-bar {
+  -webkit-app-region: drag;
+}
+
+@tailwind utilities;
