--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     -webkit-user-drag: none;
     -webkit-app-region: no-drag;
     cursor: default;
-    @apply bg-white dark:bg-[#1b1b1b];
+    @apply bg-[#1b1b1b];
   }
 }
 
